# RaiVE

./: .gitignore  Cargo.toml  README.md  app.py  config.ini  flake.nix  justfile  pyproject.toml  rust-toolchain.toml  setup.cfg
.github/workflows/: ci.yml
deploy/: nginx.conf  setup_nginx.sh
pkg/: index.html  main.js  package.json  raive.d.ts  raive.js  raive_bg.js  raive_bg.wasm  raive_bg.wasm.d.ts  style.css  style.css.map  wasm-bridge.js
pkg/styles/base/: _base.scss
pkg/styles/components/: _components.scss
pkg/styles/overlays/: _overlays.scss
raive/: engine.py  factory.py  model.py  ping_pong.py
raive-ui/: index.html  package-lock.json  package.json
raive-ui/public/: robots.txt  sitemap.xml  visualization.js
raive-ui/public/strudel/: index-BqoZFcFJ.js  index-CA4WOWT7.js  index-CDG8As-g.js  index-DgJ4ePca.js  index-Dtmgwx_K.js  index.js  index.mjs
raive-ui/public/strudel/assets/: worklets-BCUW9-Yo.js
raive-ui/src/: main.js  style.css  style.css.map
raive-ui/src/pkg/: package.json  raive.d.ts  raive.js  raive_bg.wasm  raive_bg.wasm.d.ts  wasm-bridge.js
raive-ui/src/styles/: styles.scss
raive-ui/src/styles/base/: _base.scss
raive-ui/src/styles/components/: _components.scss
raive-ui/src/styles/layout/: _layout.scss
raive-ui/src/styles/overlays/: _overlays.scss
raive/static/css/: style.css
raive/static/js/: main.js
raive/static/prompts/: followup.txt  initial.txt
raive/static/strudel/: hydra-CoBqqPns.js
raive/templates/: index.html
src/: lib.rs  main.rs  model.rs
src/models/: gemini.rs
src/models/prompts/: error_system.txt  error_user.txt  followup_system.txt  followup_user.txt  initial_system.txt  initial_user.txt
web-out/: index.html  package.json  raive.js  style.css  vercel.json
