[package]
name = "raive"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
gemini-rust = { git = "https://github.com/JachymPutta/gemini-rust.git", version = "0.4.2" }
tokio = "1.45.0"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
console_error_panic_hook = "0.1.7"
once_cell = "1.21.3"


