[package]
name = "raive"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
gemini-rust = { git = "https://github.com/JachymPutta/gemini-rust.git", version = "0.4.2" }
tokio = { version = "1.45.0", features = ["rt", "macros"] }
futures = "0.3"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
console_error_panic_hook = "0.1.7"
once_cell = "1.21.3"
dotenvy = "0.15.7"


