[package]
name = "raive"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
gemini-rust = "1.2.1"
tokio = { version = "1.45.0", features = ["rt", "macros"] }
futures = "0.3"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
console_error_panic_hook = "0.1.7"
once_cell = "1.21.3"
web-sys = { version = "0.3.77", features = ["console"] }


